--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "bin": {
     "uglify-classes": "bin/main.js"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arnoclr/uglify-classes.git"
+  },
+  "keywords": ["css", "uglify", "minify", "compress", "minification", "minify-css", "optimization"],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "command-line-args": "^5.2.0",
     "glob": "^7.2.0"
