--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "setup-dev": "npm link",
-    "build-demo": "cd test && copyfiles ./src/**/* ./dist && uglify-classes"
+    "build-demo": "cd test && copyfiles ./src/**/* ./dist && uglify-classes --method=random:4"
   },
   "bin": {
     "uglify-classes": "bin/main.js"
