--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uglify-classes",
   "version": "1.2.3",
-  "description": "",
+  "description": "This package help you to minify your classnames to optimize size of your app. It's work with a simple CLI, and can be triggered after a build. You can save up to 30% space on CSS files and 20% on HTML files.",
   "main": "index.js",
   "scripts": {
     "setup-dev": "npm link",
